@@ -6,6 +6,7 @@
 	* Fixed Bug #84: Fixed wrong setup of CPUID machine code and added more flags
 	* Fixed Bug #88: Get Windows CPU info with wmic
 	* Fixed Bug #94: Fails to detect winreg imported as _winreg in get_system_info
+	* Fixed Bug #95: Include if Python is 32 or 64 bit in get_system_info
 
 06/10/2017 Release 3.3.0
 	* Fixed Bug #70: subprocess.Popen breaks under Windows GUI app
